<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"/>

    <item android:id="@+id/action_fav"
        android:title="@string/action_fav"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_star"
        android:showAsAction="always"/>

    <item android:id="@+id/action_userpref"
        android:title="@string/action_userpref"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_user"
        android:showAsAction="always"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="always"/>

</menu>