<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.week4.app.InfoActivity">

    <TextView
        android:text="@string/devname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/devname"
        android:paddingBottom="10dp"
        android:textSize="24sp" />
    <TextView
        android:text="@string/projectname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/projectname"
        android:layout_below="@+id/devname"
        android:paddingBottom="10dp"
        android:textSize="24sp" />
    <TextView
        android:text="@string/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/projectname"
        android:id="@+id/course"
        android:textSize="24sp"
        android:paddingBottom="10dp" />
    <TextView
        android:text="@string/term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course"
        android:id="@+id/term"
        android:textSize="24sp" />

</RelativeLayout>
